--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(pv021_projekt C)
 set(CMAKE_C_STANDARD 17)
 
 add_executable(pv021_projekt
-        src/neuronka.c src/input.c)
+        src/neuronka.c
+        src/input.c)
